--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,1 @@
-<link rel="icon" type="image/png" href="assets/favicon.png">
+<link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
