Added html templated to file.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,11 @@
-<link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Binit</title>
+    <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
+  </head>
+  <body>
+    
+  </body>
+</html>
