--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,4 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
+<head>    
     <title>Binit</title>
-    <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
-  </head>
-  <body>
-    
-  </body>
-</html>
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
+</head>
