--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
 <head>    
     <title>Binit</title>
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
 </head>
