--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,4 +1,4 @@
 <head>    
     <title>Binit</title>
-    <link rel="shortcut icon" type="x-icon" href="/assets/favicon.png">
+    <link rel="shortcut icon" type="x-icon" href="/favicon.png">
 </head>
