--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,12 @@ html {
   scroll-behavior: smooth;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -20,7 +26,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 40px;
+  padding: 1rem;
   color: #000000;
   top: 0;
   left: 0;
@@ -35,7 +41,7 @@ header.dark-theme {
 }
 
 .logo {
-  height: 48px;
+  height: 2.5rem;
   width: auto;
 }
 
@@ -55,12 +61,12 @@ nav ul {
 }
 
 nav ul li {
-  margin-left: 20px;
+  margin-left: 1rem;
 }
 
 nav ul li a {
   color: #000000;
-  font-size: 24px;
+  font-size: 1.3rem;
   text-decoration: none;
   padding: 5px 10px;
   transition: font-size 0.3s, border-bottom 0.3s;
@@ -68,7 +74,7 @@ nav ul li a {
 
 nav ul li a:hover {
   color: var(--theme-color-light);
-  border-bottom: 6px solid var(--theme-color-light);
+  border-bottom: 4px solid var(--theme-color-light);
 }
 
 main {
@@ -77,10 +83,6 @@ main {
   padding: 20px 0;
   padding-bottom: 80px;
   padding-top: 95px;
-}
-
-main section {
-  margin-top: 80px;
 }
 
 main section h1 {
@@ -174,7 +176,7 @@ body.dark-theme nav ul li a.selected {
 
 nav ul li a:hover.dark-theme {
   color: var(--theme-color-dark);
-  border-bottom: 6px solid var(--theme-color-dark);
+  border-bottom: 4px solid var(--theme-color-dark);
 }
 
 footer.dark-theme {
@@ -232,13 +234,13 @@ footer.dark-theme p {
   transform: translateX(26px);
 }
 
-.card-container {
+.certifications-card-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
 
-.card {
+.certifications-card {
   display: flex;
   border: 1px solid #ccc;
   border-radius: 1rem;
@@ -246,42 +248,44 @@ footer.dark-theme p {
   overflow: hidden;
 }
 
-.card-logo {
-  width: 50%;
+.certifications-card-logo {
+  width: 40%;
   height: auto;
   object-fit: cover;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
 
-.card-content {
-  padding: 20px;
+.certifications-card-content {
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  width: 50%;
+  align-items: flex-start;
+  width: 60%;
 }
 
-.card-name {
+.certifications-card-name {
   font-size: 2rem;
   margin: 10px 0;
+  text-align: center;
 }
 
-.card-link {
+.certifications-card-link {
   color: #007BFF;
   text-decoration: none;
   margin-top: auto;
+  align-self: flex-end;
 }
 
-.card-link:hover {
+.certifications-card-link:hover {
   text-decoration: underline;
 }
 
 .education-card-container {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 1rem;
 }
 
 .education-card {
@@ -331,6 +335,16 @@ footer.dark-theme p {
   text-decoration: none;
   display: inline-block;
   text-align: center;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+.view-transcript-link.light-theme{
+  border: 1.5px solid var(--theme-color-light);
+}
+
+.view-transcript-link.dark-theme{
+  border: 1.5px solid var(--theme-color-dark);
 }
 
 .view-transcript-link:hover,
@@ -398,11 +412,11 @@ footer.dark-theme p {
   fill: var(--theme-color-dark);
 }
 
-.card-link.light-theme {
+.certifications-card-link.light-theme {
   color: var(--theme-color-light);
 }
 
-.card-link.dark-theme {
+.certifications-card-link.dark-theme {
   color: var(--theme-color-dark);
 }
 
@@ -515,8 +529,8 @@ body.dark-theme #dynamic-text {
 }
 
 .contact-image {
-  width: 48px;
-  height: 48px;
+  width: 3rem;
+  height: 3rem;
   fill: var(--theme-color-light);
 }
 
@@ -531,7 +545,7 @@ body.dark-theme #dynamic-text {
   align-items: center;
 }
 
-.flex-container svg,
+.flex-container,
 .flex-container .slider-container {
   margin: 0 10px;
 }
@@ -645,7 +659,7 @@ body.dark-theme .raised-card:hover {
 }
 
 .svg-container:hover svg {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .svg-label {
@@ -684,4 +698,89 @@ body.dark-theme .raised-card:hover {
 
 .education-card .svg-animate {
   animation: appearBottomAndFlip 1s ease-out forwards;
+}
+
+.education-details {
+    position: relative;    
+    margin: 0;
+    padding: 0;
+}
+
+.education-details-title {   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.2rem;
+    margin-bottom: 0;
+}
+
+.toggle-icon {
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.toggle-icon svg {
+    width: 2rem;
+    height: 2rem;
+}
+
+.plus-icon path {
+  stroke: var(--theme-color-light);
+  stroke-width: 1px;
+}
+
+.minus-icon path {
+  stroke: var(--theme-color-light);
+  stroke-width: 1px;
+}
+
+body.dark-theme .plus-icon path {
+  stroke: var(--theme-color-dark);
+  stroke-width: 1px;
+}
+
+body.dark-theme .minus-icon path {
+  stroke: var(--theme-color-dark);
+  stroke-width: 1px;
+}
+
+.education-details-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s ease-out, opacity 1s ease-out;
+  opacity: 0;
+  padding-left: .5rem;
+}
+
+.education-details-content.show {
+  max-height: fit-content;
+  opacity: 1;
+}
+
+@keyframes fadeInFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.certifications-card-logo {
+  animation: fadeInFromLeft 1s ease-out forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.svg-container {
+  animation: fadeIn .5s ease-in forwards;
 }
