--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,6 +20,9 @@ body {
   padding: 0;
   background-color: #ffffff;
   color: #000000;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .visually-hidden {
@@ -89,11 +92,15 @@ nav ul li a:hover {
 }
 
 main {
-  width: 60vw;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin: 0 auto;
   padding: 20px 0;
   padding-bottom: 80px;
   padding-top: 95px;
+  width: 60vw;
 }
 
 main section h1 {
@@ -109,30 +116,100 @@ main section h1 {
   top: 0;
 }
 
+/* Default styles for smaller screens */
 .hero {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   padding: 0 20px;
 }
 
 .intro-text {
-  width: 70%;
+  width: 100%;
+  text-align: center;
   opacity: 0;
   transform: translateY(20px);
   animation: appear-from-bottom 1s forwards;
 }
 
+.intro-text h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.intro-text p {
+  font-size: .5rem;
+}
+
+.intro-text p:first-of-type,
+#dynamic-text {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
 .hero-image {
-  width: 30%;
-  text-align: right;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 1rem;
   animation: appear-from-bottom 1s forwards;
 }
 
 .hero-image img {
   width: 60%;
   height: auto;
+}
+
+/* Styles for larger screens (laptop and desktop) */
+@media (min-width: 1024px) {
+  .hero {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 70vw;
+  }
+
+  .intro-text {
+    width: 70%;
+    text-align: left;
+    margin-left: 2rem;
+  }
+
+  .intro-text h1{
+    text-align: left;
+    font-size: 4rem;
+  }
+
+  .intro-text p{
+    font-size: 1rem;
+  }
+
+  #dynamic-text {
+    font-size: x-large;
+  }
+
+  .intro-text p:first-of-type,
+  #dynamic-text {
+    display: inline;
+    width: auto;
+    text-align: left;
+  }
+
+  .hero-image {
+    width: 30%;
+    text-align: right;
+    margin-bottom: 0;
+  }
+}
+
+.hero-mask.light-theme .hero-mask-path {
+  fill: var(--theme-color-light);
+}
+
+.hero-mask.dark-theme .hero-mask-path {
+  fill: var(--theme-color-dark);
 }
 
 footer {
@@ -417,14 +494,6 @@ footer.dark-theme p {
   background-color: #4CAF50;
 }
 
-.hero-mask.light-theme .hero-mask-path {
-  fill: var(--theme-color-light);
-}
-
-.hero-mask.dark-theme .hero-mask-path {
-  fill: var(--theme-color-dark);
-}
-
 .certifications-card-link.light-theme {
   color: var(--theme-color-light);
 }
@@ -560,7 +629,7 @@ body.dark-theme #dynamic-text {
 
 .flex-container,
 .flex-container .slider-container {
-  margin: 0 10px;
+  margin: 0 1rem;
 }
 
 .contact-me-text {
@@ -737,7 +806,7 @@ body.dark-theme .raised-card:hover {
 
 .toggle-icon {
     cursor: pointer;
-    margin-left: 10px;
+    margin-left: 1rem;
 }
 
 .toggle-icon svg {
