--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,14 +26,22 @@ body {
 }
 
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    border: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+#home, #education {
+  width: 90vw;
+}
+
+#skills, #certifications, #contact{
+  width: 70vw;
 }
 
 header {
@@ -55,7 +63,7 @@ header.dark-theme {
 }
 
 .logo {
-  height: 2.5rem;
+  height: 2rem;
   width: auto;
 }
 
@@ -76,15 +84,14 @@ main {
   padding: 20px 0;
   padding-bottom: 80px;
   padding-top: 95px;
-  width: 60vw;
 }
 
 main section h1 {
-  margin-bottom: 40px;
   text-align: center;
   font-weight: 400;
-  font-size: 54px;
+  font-size: 2.5rem;
 }
+
 
 /* Style for the selected section */
 .selected-section {
@@ -127,18 +134,18 @@ main section h1 {
 }
 
 .hero-image {
-  width: 100%;
+  width: 50%;
   text-align: center;
   margin-bottom: 1rem;
-  animation: appear-from-bottom 1s forwards;
+  padding-top: 1rem;
 }
 
 .hero-image img {
-  width: 60%;
+  width: 100%;
   height: auto;
 }
 
-
+/* Navigation Menu Styles */
 .hamburger-menu {
   display: block;
   font-size: 2rem;
@@ -175,10 +182,6 @@ main section h1 {
   flex-direction: column;
 }
 
-.nav-menu.active ul {
-  flex-direction: column;
-}
-
 .nav-menu.active ul li {
   padding: .5rem 0;
   text-decoration: none;
@@ -191,7 +194,7 @@ main section h1 {
   transition: font-size 0.3s, border-bottom 0.3s;
 }
 
-/* Dark Theme */
+/* Dark Theme Styles */
 .nav-menu.dark-theme {
   background-color: #1e1e1e;
 }
@@ -201,7 +204,7 @@ main section h1 {
   border-bottom: 4px solid var(--theme-color-dark);
 }
 
-/* Light Theme */
+/* Light Theme Styles */
 .nav-menu.light-theme {
   background-color: #ffffff;
 }
@@ -211,9 +214,161 @@ main section h1 {
   border-bottom: 4px solid var(--theme-color-light);
 }
 
+/* Skills Card Styles for smaller screen size */
+
+.skills-card-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: .5rem;
+}
+
+.skills-card-container .skills-card {
+  grid-column: 1 / -1;
+}
+
+.skills-card {
+  border: 1px solid #ccc;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin: 1rem 0;
+}
+
+.skills-card h2 {
+  margin-top: 0;
+  padding-bottom: .5rem;
+  border-bottom: 1px dotted #ccc;
+  font-weight: 400;
+  font-size: 1.5rem;
+}
+
+.skills-card-content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.skills-card-content svg {
+  width: 2rem;
+  height: 2rem;
+  position: relative;
+  cursor: pointer;
+}
+
+.skills-card-content img::after {
+  content: attr(alt);
+  position: absolute;
+  top: -2rem;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 2px 5px;
+  border-radius: 3px;
+  font-weight: bold;
+  display: none;
+  white-space: nowrap;
+}
+
+.skills-card-content img:hover::after {
+  display: block;
+}
+
+/* Footer Styles */
+footer {
+  text-align: center;
+  padding: 1rem;
+  background-color: #f1f1f1;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
+footer p {
+  margin: 0;
+  color: #000000;
+  font-size: .8rem;
+}
+
+.footer-logo {
+  height: .8rem;
+  width: auto;
+}
+
+/* Certifications Card Styles */
+.certifications-card-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.certifications-card {
+  display: flex;
+  border: 1px solid #ccc;
+  border-radius: 1rem;
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.certifications-card-logo {
+  width: 30%;
+  height: auto;
+  object-fit: cover;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.certifications-card-content {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 70%;
+}
+
+.certifications-card-name {
+  font-size: 1.5rem;
+  margin: 10px 0;
+  text-align: center;
+}
+
+.certifications-card-link {
+  color: #007BFF;
+  text-decoration: none;
+  margin-top: auto;
+  align-self: flex-end;
+}
+
+.certifications-card-link:hover {
+  text-decoration: underline;
+}
+
+.certifications-card-link.light-theme {
+  color: var(--theme-color-light);
+}
+
+.certifications-card-link.dark-theme {
+  color: var(--theme-color-dark);
+}
+
 /* Styles for larger screens (laptop and desktop) */
-@media (min-width: 1024px) { 
-  
+@media (min-width: 1024px) {
+  /* Default section width for laptop/desktop screen sizes */
+  #home{
+    width: 60vw;
+  }
+
+  #education, #skills, #certifications, #contact {
+    width: 80vw;
+  }
+
+  /* Larger logo for larger screen size */
+  .logo {
+    height: 2.5rem;
+    width: auto;
+  }
+
   .nav-menu {
     display: flex;
     position: static;
@@ -257,7 +412,6 @@ main section h1 {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 70vw;
   }
 
   .intro-text {
@@ -287,12 +441,84 @@ main section h1 {
   }
 
   .hero-image {
-    width: 30%;
+    width: 50%;
     text-align: right;
     margin-bottom: 0;
   }
+
+  /* Page header for larger screen sizes */
+  main section h1 {    
+    font-size: 4rem;
+  }
+
+  /* Skills Card Styles for larger screen size */
+
+  .skills-card-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+
+  .skills-card-container .skills-card:nth-child(1),
+  .skills-card-container .skills-card:nth-child(2) {
+    grid-column: span 1;
+  }
+
+  .skills-card-container .skills-card:nth-child(3),
+  .skills-card-container .skills-card:nth-child(4) {
+    grid-column: 1 / -1;
+  }
+
+  .skills-card h2 {
+    font-size: 2rem;
+  }
+  
+  .skills-card-content svg {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .skills-card-content img::after {
+    top: -1.5rem;    
+  }
+
+  /* Footer Styles for larger screens */
+  footer {
+    text-align: center;
+    padding: 1.25rem;
+    background-color: #f1f1f1;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+  }
+
+  footer p {
+    margin: 0;
+    color: #000000;
+    font-size: 1.25rem;
+  }
+
+  .footer-logo {
+    height: 1.25rem;
+    width: auto;
+  }
+
+  /* Certifications Styles for larger screens */
+  .certifications-card-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .certifications-card-logo {
+    width: 50%;
+    height: auto;
+  }
+
+  .certifications-card-name {
+    font-size: 2rem;
+  }
+
 }
 
+/* Hero Mask Styles */
 .hero-mask.light-theme .hero-mask-path {
   fill: var(--theme-color-light);
 }
@@ -301,26 +527,7 @@ main section h1 {
   fill: var(--theme-color-dark);
 }
 
-footer {
-  text-align: center;
-  padding: 20px;
-  background-color: #f1f1f1;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-}
-
-footer p {
-  margin: 0;
-  color: #000000;
-}
-
-.footer-logo {
-  height: 20px;
-  width: auto;
-  vertical-align: top;
-}
-
+/* Animations */
 @keyframes appear-from-bottom {
   to {
     opacity: 1;
@@ -328,6 +535,7 @@ footer p {
   }
 }
 
+/* Dark Theme Body Styles */
 body.dark-theme {
   background-color: #121212;
   color: #ffffff;
@@ -364,10 +572,10 @@ footer.dark-theme p {
   color: #ffffff;
 }
 
+/* Slider Styles */
 .slider-container {
   display: flex;
   align-items: center;
-  /* margin-left: 20px; */
   position: relative;
   width: 60px;
   height: 34px;
@@ -411,56 +619,63 @@ footer.dark-theme p {
   transform: translateX(26px);
 }
 
-
-
-.certifications-card-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+/* Education Card Styles */
+.education-details {
+  position: relative;    
+  margin: 0;
+  padding: 0;
 }
 
-.certifications-card {
+.education-details-title {   
   display: flex;
-  border: 1px solid #ccc;
-  border-radius: 1rem;
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.2rem;
+  margin-bottom: 0;
+}
+
+.toggle-icon {
+  cursor: pointer;
+  margin-left: 1rem;
+}
+
+.toggle-icon svg {
+  width: 2rem;
+  height: 2rem;
+}
+
+.plus-icon path {
+  stroke: var(--theme-color-light);
+  stroke-width: 1px;
+}
+
+.minus-icon path {
+  stroke: var(--theme-color-light);
+  stroke-width: 1px;
+}
+
+body.dark-theme .plus-icon path {
+  stroke: var(--theme-color-dark);
+  stroke-width: 1px;
+}
+
+body.dark-theme .minus-icon path {
+  stroke: var(--theme-color-dark);
+  stroke-width: 1px;
+}
+
+.education-details-content {
+  max-height: 0;
   overflow: hidden;
+  transition: max-height 1s ease-out, opacity 1s ease-out;
+  opacity: 0;
+  padding-left: .5rem;
 }
 
-.certifications-card-logo {
-  width: 40%;
-  height: auto;
-  object-fit: cover;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.education-details-content.show {
+  max-height: fit-content;
+  opacity: 1;
 }
-
-.certifications-card-content {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  width: 60%;
-}
-
-.certifications-card-name {
-  font-size: 2rem;
-  margin: 10px 0;
-  text-align: center;
-}
-
-.certifications-card-link {
-  color: #007BFF;
-  text-decoration: none;
-  margin-top: auto;
-  align-self: flex-end;
-}
-
-.certifications-card-link:hover {
-  text-decoration: underline;
-}
-
 .education-card-container {
   display: flex;
   flex-direction: column;
@@ -518,11 +733,11 @@ footer.dark-theme p {
   border-radius: 5px;
 }
 
-.view-transcript-link.light-theme{
+.view-transcript-link.light-theme {
   border: 1.5px solid var(--theme-color-light);
 }
 
-.view-transcript-link.dark-theme{
+.view-transcript-link.dark-theme {
   border: 1.5px solid var(--theme-color-dark);
 }
 
@@ -551,10 +766,11 @@ footer.dark-theme p {
 }
 
 .education-grade-duration,
-.education-grade-gpa p{
+.education-grade-gpa p {
   margin: 0;
 }
 
+/* Visit Website Button Styles */
 .visit-website-btn {
   display: inline-block;
   padding: 10px 20px;
@@ -583,114 +799,7 @@ footer.dark-theme p {
   background-color: #4CAF50;
 }
 
-.certifications-card-link.light-theme {
-  color: var(--theme-color-light);
-}
-
-.certifications-card-link.dark-theme {
-  color: var(--theme-color-dark);
-}
-
-.intro-text p {
-  display: flex;
-  align-items: center;
-  font-size: 1.2rem;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-#dynamic-text {
-  white-space: nowrap;
-  overflow: hidden;
-  display: inline-block;
-  text-align: left;
-  visibility: visible;
-  margin-left: 5px;
-  margin-right: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
-  font-family: monospace;
-  height: 20px;
-}
-
-body.light-theme #dynamic-text {
-  background-color: var(--theme-color-light);
-  color: #ffffff;
-}
-
-body.dark-theme #dynamic-text {
-  background-color: var(--theme-color-dark);
-  color: #000000;
-}
-
-.skills-card-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-}
-
-.skills-card-container .skills-card:nth-child(1) {
-  grid-column: 1 / 2;
-}
-
-.skills-card-container .skills-card:nth-child(2) {
-  grid-column: 2 / 3;
-}
-
-.skills-card-container .skills-card:nth-child(3) {
-  grid-column: 1 / -1;
-}
-
-.skills-card-container .skills-card:nth-child(4) {
-  grid-column: 1 / -1;
-}
-
-.skills-card {
-  border: 1px solid #ccc;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-}
-
-.skills-card h2 {
-  margin-top: 0;
-  padding-bottom: .5rem;
-  border-bottom: 1px dotted #ccc;
-  font-weight: 400;
-}
-
-.skills-card-content {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-}
-
-.skills-card-content svg {
-  width: 64px;
-  height: 64px;
-  position: relative;
-  cursor: pointer;
-}
-
-.skills-card-content img::after {
-  content: attr(alt);
-  position: absolute;
-  top: -25px;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: #fff;
-  padding: 2px 5px;
-  border-radius: 3px;
-  font-weight: bold;
-  display: none;
-  white-space: nowrap;
-}
-
-.skills-card-content img:hover::after {
-  display: block;
-}
-
+/* Image Links Styles */
 .image-links {
   display: flex;
   justify-content: center;
@@ -707,6 +816,7 @@ body.dark-theme #dynamic-text {
   fill: var(--theme-color-light);
 }
 
+/* Flex Container Styles */
 .flex-container {
   display: flex;
   justify-content: space-between;
@@ -716,17 +826,16 @@ body.dark-theme #dynamic-text {
 .slider-container {
   display: flex;
   align-items: center;
+  margin: 0 .5rem;
 }
 
-.slider-container {
-  margin: 0 1rem;
-}
-
+/* Contact Me Styles */
 .contact-me-text {
   text-align: center;
   font-size: 1.2rem;
 }
 
+/* Contact Me Form Styles */
 form {
   max-width: 420px;
   margin: 50px auto;
@@ -799,6 +908,7 @@ textarea {
   background: #4CAF50;
 }
 
+/* Raised Card Styles */
 .raised-card {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -818,11 +928,44 @@ body.dark-theme .raised-card:hover {
   box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
 }
 
+/* Intro Text Styles */
+.intro-text p {
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+#dynamic-text {
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  text-align: left;
+  visibility: visible;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-family: monospace;
+  height: 20px;
+}
+
+body.light-theme #dynamic-text {
+  background-color: var(--theme-color-light);
+  color: #ffffff;
+}
+
+body.dark-theme #dynamic-text {
+  background-color: var(--theme-color-dark);
+  color: #000000;
+}
+
+/* SVG Container Styles */
 .svg-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
   position: relative;
 }
 
@@ -865,6 +1008,7 @@ body.dark-theme .raised-card:hover {
   color: var(--theme-color-light);
 }
 
+/* Keyframes for Animations */
 @keyframes appearBottomAndFlip {
   from {
     transform: translateY(20%) rotateY(180deg);
@@ -878,63 +1022,6 @@ body.dark-theme .raised-card:hover {
 
 .education-card .svg-animate {
   animation: appearBottomAndFlip 1s ease-out forwards;
-}
-
-.education-details {
-    position: relative;    
-    margin: 0;
-    padding: 0;
-}
-
-.education-details-title {   
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.2rem;
-    margin-bottom: 0;
-}
-
-.toggle-icon {
-    cursor: pointer;
-    margin-left: 1rem;
-}
-
-.toggle-icon svg {
-    width: 2rem;
-    height: 2rem;
-}
-
-.plus-icon path {
-  stroke: var(--theme-color-light);
-  stroke-width: 1px;
-}
-
-.minus-icon path {
-  stroke: var(--theme-color-light);
-  stroke-width: 1px;
-}
-
-body.dark-theme .plus-icon path {
-  stroke: var(--theme-color-dark);
-  stroke-width: 1px;
-}
-
-body.dark-theme .minus-icon path {
-  stroke: var(--theme-color-dark);
-  stroke-width: 1px;
-}
-
-.education-details-content {
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 1s ease-out, opacity 1s ease-out;
-  opacity: 0;
-  padding-left: .5rem;
-}
-
-.education-details-content.show {
-  max-height: fit-content;
-  opacity: 1;
 }
 
 @keyframes fadeInFromLeft {
@@ -965,12 +1052,12 @@ body.dark-theme .minus-icon path {
   animation: fadeIn .5s ease-in forwards;
 }
 
-/* Light theme styles */
+/* Light Theme Styles */
 .hamburger-menu.light-theme {
   color: var(--theme-color-light);
 }
 
-/* Dark theme styles */
+/* Dark Theme Styles */
 .hamburger-menu.dark-theme {
   color: var(--theme-color-dark);
 }
