--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -318,7 +318,7 @@ footer p {
 .certifications-card-logo {
   width: 30%;
   height: auto;
-  object-fit: cover;
+  object-fit: contain;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
@@ -703,7 +703,7 @@ body.dark-theme .caret-up path {
   }
 
   .certifications-card-logo {
-    width: 50%;
+    width: 40%;
     height: auto;
   }
 
