--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -410,11 +410,12 @@ footer p {
   align-items: center;
   font-size: 1.2rem;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 .toggle-icon {
   cursor: pointer;
-  margin-left: 1rem;
+  /* margin-left: 1rem; */
 }
 
 .toggle-icon svg {
@@ -473,7 +474,7 @@ body.dark-theme .caret-up path {
 }
 
 .education-degree-title {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   margin: 0;
   border-bottom: 1px dotted #ccc;
   width: 100%;
